--- a/International-Participant.html
+++ b/International-Participant.html
@@ -382,7 +382,7 @@
                 required
               >
                 <option value="">
-                  --Pilih Sumber Informasi--
+                  --Choose Your Source--
                 </option>
                 <option value="IYSA Instagram">IYSA Instagram</option>
                 <option value="GLOCOLIS Instagram">
